Google standard contrast fix for site title

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -102,11 +102,11 @@ h6 {
 
 /* Dark Mode Styles */
 :root {
-	--primary-color: #706c61;
+	--primary-color: #6c695e;
 	--secondary-color: #eeeae1;
 	--font-color: #333;
 	--bg-color: #ffffff;
-	--heading-color: #706c61;
+	--heading-color: #6c695e;
 }
 
 [data-theme="dark"] {
